--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome</h3>
 
 <p>This is a fork of the original Mediawiki extension <a href="http://www.mediawiki.org/wiki/Extension:PrivatePageProtection">PrivatePageProtection</a> by Daniel Kinzler (<a href="http://www.mediawiki.org/wiki/User:Duesentrieb">Duesentrieb</a>)</p>
 
